# my_sim

./: #sim_main.cpp#  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README.md  clkrst.v  data_gen.v  framer.v  fsk.v  hamming.v  move.sh  my_verilate.sh  pcm.v  r_framer.v  r_fsk.v  r_hamming.v  r_pcm.v  sim_main.cpp  sub.v  tb.v  top.v
